fix: fix gaps

--- a/styles/style.css
+++ b/styles/style.css
@@ -422,19 +422,20 @@ ul, ol {
 .main__content__gallery {
     list-style: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
 .gallery__item {
     width: 128px;
     height: 128px;
+    padding: 0 0 var(--spacing-s);
 }
 
 .content__payload {
     display: flex;
     flex-direction: column;
-    gap: var(--spacing-l);
+    gap: var(--spacing-m);
 }
 
 .project__main__description {
